Bug 389358 -- Give doc title & URL to pageSeqFrame for display in print-preview header.  r+sr=roc; a=blocking1.9+